Exercise: Fix legacy checkbox styling (spacing + primary checked state) - refs #7378

--- a/assets/css/scss/_exercise.scss
+++ b/assets/css/scss/_exercise.scss
@@ -40,12 +40,12 @@
 }
 
 .question_options .checkbox {
-  margin-left: 65px;
+  margin-left: 5px;
 }
 
 .question_options .radio input[type="radio"], .question_options .checkbox input[type="checkbox"] {
   float: left;
-  margin-left: -25px;
+  margin-left: 0px;
 }
 
 .question_options input[type="text"] {
